--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ main .child {
 }
 main h1 {
     font-size: 50px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 main .parent {
     display: flex;
